Fixed wrong positioning

--- a/styles/pages/vertical.css
+++ b/styles/pages/vertical.css
@@ -1,36 +1,52 @@
-.page[state=shown][direction=down],
-.page[state=hiding][direction=down],
-.page[state=shown][direction=up],
-.page[state=hiding][direction=up] {
-    left: 100%;
-    top: 50%;
-    transform: translate(calc(-100% - 12ch), -50%);
+.page[state='shown'][direction='down'],
+.page[state='hiding'][direction='down'],
+.page[state='shown'][direction='up'],
+.page[state='hiding'][direction='up'] {
+  left: 100vw;
+  top: 50vh;
+  transform: translate(-100vw, -50vh);
 }
-.page[state=shown][direction=down] {
-    animation: showPageDown .5s ease-in-out forwards;
+.page[state='shown'][direction='down'] {
+  animation: showPageDown 0.5s ease-in-out forwards;
 }
-.page[state=hiding][direction=down] {
-    animation: hidePageDown .5s ease-in-out forwards;
+.page[state='hiding'][direction='down'] {
+  animation: hidePageDown 0.5s ease-in-out forwards;
 }
 @keyframes showPageDown {
-    0% { rotate: -90deg }
-    100% { rotate: 0deg }
+  0% {
+    rotate: -90deg;
+  }
+  100% {
+    rotate: 0deg;
+  }
 }
 @keyframes hidePageDown {
-    0% { rotate: 0deg }
-    100% { rotate: 90deg }
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 90deg;
+  }
 }
-.page[state=shown][direction=up] {
-    animation: showPageUp .5s ease-in-out forwards;
+.page[state='shown'][direction='up'] {
+  animation: showPageUp 0.5s ease-in-out forwards;
 }
-.page[state=hiding][direction=up] {
-    animation: hidePageUp .5s ease-in-out forwards;
+.page[state='hiding'][direction='up'] {
+  animation: hidePageUp 0.5s ease-in-out forwards;
 }
 @keyframes showPageUp {
-    0% { rotate: 90deg }
-    100% { rotate: 0deg }
+  0% {
+    rotate: 90deg;
+  }
+  100% {
+    rotate: 0deg;
+  }
 }
 @keyframes hidePageUp {
-    0% { rotate: 0deg }
-    100% { rotate: -90deg }
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: -90deg;
+  }
 }
